--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,15 @@ body {
     height: 400px;
     background-color: white;
     text-align: center;
+    margin: auto;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.programs div {
+    align-items: center;
+    margin: auto;
 }
 
 .ourmission {
@@ -56,6 +65,26 @@ body {
     margin-left: -60%;
     background-color: white;
     text-align: center;
+}
+
+.cybersecurity {
+    background-color: gray;
+    display: flex;
+}
+
+.robotics {
+    background-color: gray;
+    display: flex;
+}
+
+.womeninstem {
+    background-color: gray;
+    display: flex;
+}
+
+.topimage {
+    max-width: 300px;
+    max-height: 200px;
 }
 
 .benefits {
