--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Fredoka', sans-serif;
+    display: flexbox;
 }
 
-.footer {
-    color: white;
+.text-left {
     text-align: left;
-    text-decoration-line: underline;
-    margin-left: 2%;
+    color:white;
 }
 
-.footerover {
-    color: white;
+.text-right {
     text-align: right;
-    text-decoration-line: underline;
-    margin-bottom: -3%;
-    margin-right: 2%;
+    color:white;
 }
 
 .ahscsico:hover {
@@ -30,13 +32,17 @@ body {
     margin: 0 auto;
 }
 
+.white-text {
+    color:white;
+}
+
 .nav-item {
     font-size: 2rem;
 }
 
 .bottom {
     background-color: rgb(0, 0, 50);
-    height: 170px;
+    height: max-content;
 }
 
 .aboutus {
@@ -46,6 +52,8 @@ body {
 }
 
 .programs {
+    border-radius: 25px;
+    padding: 20px;
     height: 400px;
     background-color: white;
     text-align: center;
@@ -58,6 +66,23 @@ body {
 .programs div {
     align-items: center;
     margin: auto;
+}
+
+.card {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.card-title {
+    font-size: 1.6rem;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.card-text {
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.underlined-text {
+    text-decoration: underline;
 }
 
 .ourmission {
