--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,10 @@ body {
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.carousel {
+    width:640px;
+    height:360px;
+}
 .underlined-text {
     text-decoration: underline;
 }
@@ -116,6 +120,7 @@ body {
     height: 500px;
     background-image: url("./images/coolrectanglee.svg");
     text-align: right;
+    background-repeat: no-repeat;
 }
 
 h1 {
