--- a/styles.css
+++ b/styles.css
@@ -45,13 +45,16 @@ body {
     height: max-content;
 }
 
+.container-fluid{
+    padding: 0;
+    overflow:auto;
+}
 .aboutus {
-    height: 400px;
     background-color: lightgray;
     text-align: center;
 }
 
-.programs {
+.programs div {
     border-radius: 25px;
     padding: 20px;
     height: 400px;
@@ -61,11 +64,7 @@ body {
     display: flex;
     align-content: center;
     justify-content: center;
-}
-
-.programs div {
-    align-items: center;
-    margin: auto;
+    align-self: center;
 }
 
 .card {
@@ -96,29 +95,10 @@ body {
     text-align: center;
 }
 
-.cybersecurity {
-    background-color: gray;
-    display: flex;
-}
-
-.robotics {
-    background-color: gray;
-    display: flex;
-}
-
-.womeninstem {
-    background-color: gray;
-    display: flex;
-}
-
-.topimage {
-    max-width: 300px;
-    max-height: 200px;
-}
-
 .benefits {
     height: 500px;
-    background-image: url("./images/coolrectanglee.svg");
+
+    background: linear-gradient(to bottom right,transparent 0%,transparent 50%,#ACBEFF 50%,#ACBEFF 100%);
     text-align: right;
     background-repeat: no-repeat;
 }
