--- a/styles.css
+++ b/styles.css
@@ -90,9 +90,10 @@ body {
 
 .ourmission {
     height: 400px;
-    margin-left: -60%;
+    margin-left: auto;
     background-color: white;
-    text-align: center;
+    text-align: left;
+    margin-left: 5%;
 }
 
 .benefits {
