--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,11 @@ body {
 }
 
 
-.btn {
+.btn-normal {
     background-color: #051E3D; 
     color: white;
+}
+
+.btn-normal:hover {
+    color:lightgray;
 }
