--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,9 @@ body {
 }
 
 .nav-item {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+    padding: 0.3em;
 }
 
 .bottom {
@@ -68,6 +70,7 @@ body {
 
 .card {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    height: 100%;
 }
 
 .card-title {
@@ -87,12 +90,18 @@ body {
     text-decoration: underline;
 }
 
-.ourmission {
-    height: 400px;
+.ourmissiontxt {
     background-color: white;
     text-align: left;
+    width:50%;
+    float:left;
 }
 
+.ourmission {
+    width:50%;
+    float:right;
+    text-align:right;
+}
 
 .aesthetic {
     background: linear-gradient(to bottom right,transparent 0%,transparent 50%,#ACBEFF 50%,#ACBEFF 100%);
@@ -121,3 +130,18 @@ body {
     background-color: #051E3D; 
     color: white;
 }
+
+@media screen and (max-width: 992px) {
+    .col {
+        flex:none;
+    }
+    .ourmissiontxt {
+        width:100%;
+    }
+    .ourmission {
+        text-align: center;
+        width:100%;
+    }
+    .ourmission img {
+        height: 250px;
+    }
