--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,9 @@ body {
 }
 
 .nav-item {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+    padding: 0.3em;
 }
 
 .bottom {
@@ -68,6 +70,7 @@ body {
 
 .card {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    height: 100%;
 }
 
 .card-title {
@@ -87,10 +90,17 @@ body {
     text-decoration: underline;
 }
 
-.ourmission {
-    height: 400px;
+.ourmissiontxt {
     background-color: white;
     text-align: left;
+    width:50%;
+    float:left;
+}
+
+.ourmission {
+    width:50%;
+    float:right;
+    text-align:right;
 }
 
 .aesthetic {
@@ -116,6 +126,49 @@ body {
     margin-left:auto!important;
 }
 
+.btn {
+    background-color: #051E3D; 
+    color: white;
+}
+
+@media screen and (max-width: 992px) {
+    .col {
+        flex:none;
+    }
+    .ourmissiontxt {
+        width:100%;
+    }
+    .ourmission {
+        text-align: center;
+        width:100%;
+    }
+    .ourmission img {
+        height: 250px;
+    }
+    .calendar iframe{
+        margin-left:0;
+        margin-right:0;
+    }
+    .banner {
+        background-position: center;
+    }
+}
+
+.banner {
+    background-image: url("/images/codeheader.PNG");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-color: #1e1e1e;
+    display:flex; 
+    align-items:center;
+    height:300px;
+    color:white;
+}
+
+.events {
+    text-align:center;
+}
+
 .btn-normal {
     background-color: #051E3D; 
     color: white;
@@ -124,3 +177,4 @@ body {
 .btn-normal:hover {
     color:lightgray;
 }
+
