--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,18 @@ body {
     color: white;
 }
 
+
+.banner {
+    background-image: url("/images/codeheader.PNG");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-color: #1e1e1e;
+    display:flex; 
+    align-items:center;
+    height:300px;
+    color:white;
+}
+
 @media screen and (max-width: 992px) {
     .col {
         flex:none;
@@ -150,20 +162,11 @@ body {
         margin-right:0;
     }
     .banner {
-        background-position: center;
+        background-image: url("/images/codeheadercrop.PNG");
     }
 }
 
-.banner {
-    background-image: url("/images/codeheader.PNG");
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-color: #1e1e1e;
-    display:flex; 
-    align-items:center;
-    height:300px;
-    color:white;
-}
+
 
 .events {
     text-align:center;
