--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,6 @@ body {
 }
 
 .btn {
-    background-color: #051E3D; 
     color: white;
 }
 
@@ -156,6 +155,34 @@ body {
 
 .banner {
     background-image: url("/images/codeheader.PNG");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-color: #1e1e1e;
+    display:flex; 
+    align-items:center;
+    height:300px;
+    color:white;
+}
+
+.banner-opp {
+    background-image: url("/images/placeholder.png"); 
+
+    /* placeholder is placeholder (obviously) replace when nessecary*/
+
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-color: #1e1e1e;
+    display:flex; 
+    align-items:center;
+    height:300px;
+    color:white;
+}
+
+.banner-team {
+    background-image: url("/images/Peter_Griffin.png"); 
+
+    /* peter is also placeholder (obviously) replace when nessecary*/
+
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-color: #1e1e1e;
